app/assets/stylesheets/api/splash_page.scss
// * {
//   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
// }
.nav-bar {
  display: flex;
  justify-content: space-between;
  // margin: 0 auto;
  // width: 960px;
  position: relative;
  z-index: 2;
  
}

.splash-header {
  height: 600px;
  background-image: image_url('bball-header.jpg');
  background-size: cover;
  opacity: .9;
}

.links-header{
  z-index: 5;
}

.session-links {
  float: right;
  margin-top: 20px;
  
}

.logo-header-div

.nav-bar section{
    float: left;
    margin-top: 20px;
    padding: 10px;
}

.photo {
  height: inherit;
}

.session-links.biz-page{
  position: relative;
  left: 0px;

}

.profile-pic {
  // width: 65px;
  // height: 65px;
    // padding: 15px;
    // border-radius: 2px;
}
.profile-pic img{
  width: 50px;
  height: 50px;
  // padding: 15px;
  border-radius: 4px;
  margin-top: 3px;
}

.profile-pic.biz-page img{
  width: 20px;
  height: 20px;
  padding: 15px;
  border-radius: 2px;
}



.sign-up-btn {
  display:inline-block;
  padding:0.35em 1.2em;
  border:0.1em solid #FFFFFF;
  border-radius: 8%;
  margin:0 10px 5px 5px;
  box-sizing: border-box;
  text-decoration:none;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  color:#FFFFFF;
  text-align:center;
  transition: all .4s;
}

.sign-up-btn:hover {
    color: gray;
    background-color:#FFFFFF;
}

.log-in-btn {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 16px;
  color: white;
  padding: 0 15px 10px 15px;
  
  // padding-right: 10px;
  // padding-left: 10px;
  margin-top: 20px;
}
.log-in-btn a{
  width: 500px;
  font-size: 16px;
  margin: 20px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.log-in-btn:hover {
  border-bottom: 1px solid white;
}


.nav-links {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 16px;
  color: white;
  padding: 0 15px 10px 15px;
  
  // padding-right: 10px;
  // padding-left: 10px;
  margin-top: 20px;
}
.nav-links a{
  width: 500px;
  font-size: 16px;
  margin: 20px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.nav-links:hover {
  border-bottom: 1px solid white;
}



/////

body{
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: bold;
}

.search {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.search-bar {
  background-color: white;
  padding: 0;
  border-radius: 3px;
  // margin-bottom: 120px;
  opacity: .9;
  width: 700px;
  display: flex;
  align-items: center;
}

.search-field {
  font-size: 14px;
  width: 285px;
}


.right-nav-bar {
  display: flex;
  margin-top: 5px;
  margin-right: 15px;
}

.fav-icon {
  height: 30px;
  width: 30px;
  padding: 12px;
  margin-top: 5px; 
}

#logout {
  // margin-top: 1px;
  // padding: 3px;
  // font-size: 14px;

  margin-top: 1px;
  padding: 3px;
  font-size: 12px;
  font-weight: 400
  // margin-left: 5px;
}
.logo-header {
  width: 260px;
  height: 132px;
  // position: absolute;
  // top: 20px;
  // right: 422px;
  filter: invert(14%) sepia(72%) saturate(5218%) hue-rotate(354deg) brightness(97%) contrast(84%);
}
.logo-header {
  z-index: 10;
}


#static-search {
  padding: 0 10px;
}

#divider {
  opacity: .3;
  align-items: center;
  height: 100%;

}

.search-ball {
  background-size: cover;
  height: 25px;
  width: 25px;
  // display: flex;
  // align-items: center;
  margin-bottom: 10px;
  position: relative;
  right: -1px;
  top: -5px
}

.search-btn {
  background-color: #D32222;
  padding: 15px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  height: 15px;
  margin-right: -1px;
  // display: flex;
  // align-items: center;
  
}

.ball-container {
  display: flex;
  align-items: center;
}

.footer-container.home-page{
  display: flex;
  align-self: baseline;
}

.hoopr-brooklyn-container{
  display: grid;
  justify-items: center;
  width: 700px;
  grid-template-columns: 100%;
  margin: 0 auto;
}

.hoopr-brooklyn-container h3{
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 16px;
  color: #D33439
}

.hr-row.splash {
  height: 1px;
  background-color: rgba(0, 0, 0, .1);
  grid-column-start: 1;
  grid-column-end: 3;

  overflow: hidden;
  display: grid;
  width: 98%;
  justify-self: center;
}

.bk-neighborhoods {
  grid-column: 1;
  justify-content: center;
}

#neighborhood-links{
  color: #857F7C;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 12px;
  font-weight: 400;
  padding: 10px 15px;
  // margin-bottom: 10px;
  display: inline-block;
}

#neighborhood-links:hover{
  border-bottom: 2px solid #D33439;
}

.search-btn:hover{
  background-color: #a71c1c
}

.biz-index-items-container{
  padding: 20px 0;
  display: grid;
  // justify-content: center;
  width: 700px;
  // grid-template-columns: 100%;
  margin: 0 auto;
  grid-template-columns: 33% 33% 33%;
  // grid-template-rows: 60% 40%;
  height: 250px;
  grid-column-gap: 15px;
  margin-bottom: 100px;
  // border: 1px solid rgba(0, 0, 0, .5); 
}

.biz-index-item{
  // display: grid;
  grid-template-rows: 60% 40%;
  border: 1px solid rgba(0, 0, 0, .2); 
  // background-color: darkgray;
}

.biz-index-item h3{
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 16px;
  font-weight: 600;
}

.row-1 {
  grid-row: 1/2;
}

.row-2 {
  // display: grid;
  grid-row: 2/2;
  padding: 5px;
}
.biz-index-item.b1{
  // grid-column: 1/3;
  // grid-row: 1;
  // border: 1px solid black;
  border-radius: 4px;
  margin: 3px;
}

.biz-index-item.b2{
  grid-column: 2/3;
  // grid-row: 1;
  // border: 1px solid rgba(0, 0, 0, .1);
  border-radius: 4px;
  margin: 3px;
}

.biz-index-item.b3{
  grid-column: 3/3;
  // grid-row: 1;
  // border: 1px solid rgba(0, 0, 0, .1);
  border-radius: 4px;
  margin: 3px;
}

.static-rating-splash{
  grid-row: 2/2;
  display: flex;
}

.logo-header-div{
    position: absolute;
    top: 20px;
    width: 100%;
    z-index: 3;
    // width: 260px;
    // margin: 0 auto;
    // display: flex;
}

#logo-header{
  width: 260px;
  margin: 0 auto;
  display: block;
  position: relative;
  z-index: 3;
}

.canal, .cage, .rucker{
  height: 150px;
}

.b-name{
  grid-row: 2/2;
}

